fixed footer img footer img remains the same width for visibility

--- a/src/css/components/footer.css
+++ b/src/css/components/footer.css
@@ -3,12 +3,16 @@ p {
     margin: 0;
 }
 
-.footerSection {
+.footerContainer{
     background: linear-gradient(180deg, rgba(241,168,195,1) 0%, rgba(254,251,252,1) 100%);
     padding-bottom: 40px;
 }
+
+.hawaiisBestSection {
+    display: flex;
+    padding: 40px 0;
+}
 .hawaiisBest {
-    width: 100%;
     height: auto;
     margin: 0 auto;
 }
