--- a/src/css/pages/home.css
+++ b/src/css/pages/home.css
@@ -105,6 +105,7 @@ Landing Page
     }
 }
 
+/** Wide desktop view **/
 @media (min-width: 1858px) {
     .aboutUsBody {
         padding: 10px 500px 0 500px; 
@@ -118,7 +119,6 @@ Landing Page
 /** About Us **/
 .aboutUs {
     padding: 40px;
-    border-bottom: 1px solid var(--primary);
     display: flex;
     flex-direction: column;
     align-items: center;
